--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="متجر الفهد ايسيم للشرائح الالكترنية المحلية والدولية"
+      content="Swift Sim - Local & International SIM Plans with Fast and Secure Activation"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,9 +13,9 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/assets/icons/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon" />
 
-    <title>متجر الفهد</title>
+    <title>Swift Sim | Local & International SIM Plans</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
